[package]
name = "libgmssl-sys"
version = "3.1.0"
edition = "2021"
build = "build.rs"
description = "libgmssl-sys"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = { workspace = true }

[build-dependencies]
bindgen = "0.65.1"
cmake = "0.1"
