[package]
name = "libgmssl-sys"
version = "3.1.0"
edition = "2021"
build = "build.rs"
description = "libgmssl-sys"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = { workspace = true }

[build-dependencies]
bindgen = "0.68.1"
cmake = "0.1"


[features]
ENABLE_SM2_ALGOR_ID_ENCODE_NULL = []
ENABLE_SM2_PRIVATE_KEY_EXPORT = []
ENABLE_TLS_DEBUG = []
ENABLE_SM3_AVX_BMI2 = []
ENABLE_SM4_AESNI_AVX = []
ENABLE_SM2_EXTS = []
ENABLE_BROKEN_CRYPTO = []
ENABLE_RDRND = []
ENABLE_GMT_0105_RNG = []
ENABLE_HTTP_TESTS = []