[package]
name = "libgmssl-sys"
version = "3.1.0-alpha"
edition = "2021"
build = "build.rs"
description = "libgmssl-sys"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = { workspace = true }

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"

[dev-dependencies]
hex = "0.4"

[features]
default = [
    "ENABLE_SM4_ECB",
    "ENABLE_SM4_OFB",
    "ENABLE_SM4_CFB",
    "ENABLE_SM4_CCM",
    "ENABLE_SM4_XTS",
    "ENABLE_SM4_CBC_MAC",
    "ENABLE_SM3_XMSS",
    "ENABLE_SHA1",
    "ENABLE_SHA2",
    "ENABLE_AES",
    "ENABLE_CHACHA20",
    "ENABLE_SDF",
    "ENABLE_ASM_UNDERSCORE_PREFIX",
    "ENABLE_SM2_ENC_PRE_COMPUTE",
]
ENABLE_SM2_ARM64 = []
ENABLE_SM3_ARM64 = []
ENABLE_SM4_ARM64 = []
ENABLE_SM4_CE = []
ENABLE_SM9_ARM64 = []
ENABLE_GMUL_ARM64 = []

ENABLE_SM4_AVX2 = []
ENABLE_SM4_AESNI = []
ENABLE_SM2_AMD64 = []

ENABLE_SM3_SSE = []

ENABLE_SM4_CTR_AESNI_AVX = []
ENABLE_SM4_CL = []

ENABLE_INTEL_RDRAND = []
ENABLE_INTEL_RDSEED = []

ENABLE_SM4_ECB = []
ENABLE_SM4_OFB = []
ENABLE_SM4_CFB = []
ENABLE_SM4_CCM = []
ENABLE_SM4_XTS = []
ENABLE_SM4_CBC_MAC = []

ENABLE_SM2_EXTS = []
ENABLE_SM3_XMSS = []

ENABLE_SHA1 = []
ENABLE_SHA2 = []
ENABLE_AES = []
ENABLE_CHACHA20 = []

ENABLE_SKF = []
ENABLE_SDF = []

ENABLE_ASM_UNDERSCORE_PREFIX = []

ENABLE_TLS_DEBUG = []

ENABLE_SM2_ENC_PRE_COMPUTE = []

[[test]]
name = "aestest"
path = "tests/aestest.rs"
